[23318] Empty PDF View on patient change (#425)